--- a/Project-part-1.ipynb
+++ b/Project-part-1.ipynb
@@ -28,6 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#librairies\n",
     "from numpy import *\n",
     "from numpy.linalg import *\n",
     "\n",
@@ -377,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
