update notebook analysis done

--- a/Project-part-1.ipynb
+++ b/Project-part-1.ipynb
@@ -122,6 +122,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install patches"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [],
@@ -288,6 +297,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "The state variable is X = (x,y,theta)\n",
+    "Our system is goverened by the following IVP:\n",
+    " X' = f(X)\n",
+    "with f(X) =     r/2 * (wl + wr) * cos(theta)\n",
+    "             (  r/2 * (wl + wr) * sin(theta)    )\n",
+    "                r / l * (wr - wl)  \n",
+    "\n",
+    "Since the inputs wl and wr are continuously differentiable, then f is also continuously differentiable and thus the IVP have a unique and continuous solution and thus the system is well posed."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -299,6 +324,17 @@
    "metadata": {},
    "source": [
     "**TODO**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "If wl and wr are constants, the differential equations that link (x',y',theta') to (wl,wr) are linear with constant coefficients. Which then implies that the maximal solution associated to any initial state is global.\n",
+    "\n",
+    "No, it is not true if wl and wr are arbitrary continuously differentiable. That is because the system of differential equations is nonlinear."
    ]
   },
   {
