--- a/Project-part-1.ipynb
+++ b/Project-part-1.ipynb
@@ -303,10 +303,9 @@
     "$\\\\y = -l/2 * (w_l + w_r)/(w_r-w_l) * cos(θ(t)) + y_0$\n",
     "$\\\\\\theta = r/l * (w_r-w_l) * t + \\theta_0$\n",
     "\n",
-    "these solutions are finite for t inferior to infinity, then every maximal solution associated to an initial state is global.\n",
+    "the derivatives of $x$, $y$ and $\\theta$ with respect to $t$ are uniformly bounded ; thus $x$, $y$ and $\\theta$ are bounded on any bounded time interval and therefore no finite-time blowup may happen: the maximal solution is global.\n",
     "\n",
-    "In the case of $w_l$ and $w_r$ are arbitrary continuously differentiable functions of (x,y,\\theta)\n",
-    "for example, if $w_l=x+y$ and $w_r=x-y$ so in this case, the wheel velocities depend directly on the robot's coordinates, so the trajectory and orientation evolution will be different depending on the specific initial position."
+    "The situation is different with state-dependent inputs; for example with $\\omega_r = - \\omega_l = 0.5 (l/r)  \\theta^2$, we end up with $\\dot{\\theta}(t) = \\theta(t)^2$ which has a finite-time blowup for some initial values of $\\theta$. Thus, the maximal solution may not be global."
    ]
   },
   {
