--- a/Project-part-2.ipynb
+++ b/Project-part-2.ipynb
@@ -754,7 +754,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**"
+    "**Answer**\n",
+    "\n",
+    "A= \\begin{bmatrix} 0 & 0 &0 \\\\ 0 & 0 &0 \\\\ 0 & 0 & 0\\end{bmatrix}\n",
+    "$$\n",
+    "$$\n",
+    "B= \\begin{bmatrix} \\frac{r}{2} & \\frac{r}{2}\n",
+    " \\\\ 0 & 0 \\\\\n",
+    "  -\\frac{r}{l} & \\frac{r}{l} \\end{bmatrix}"
    ]
   },
   {
@@ -779,7 +786,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**"
+    "**Answer**\n",
+    "\n",
+    "When $\\Delta \\omega = 0$, we have $\\dot X = AX$ ($A$ having three null eigenvalues). To have a positive answer, we expect each eigenvalue to have a strictly negative real part.  So no, the linearized system is not asymptotically stable around  $(0,0,0)$"
    ]
   },
   {
@@ -795,7 +804,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**"
+    "**Answer**\n",
+    "\n",
+    "No,the system can't move when $\\omega = \\omega_e$. If $X(t_0) = X_0$, then $\\forall t>0, X(t) =X_0$. Consequently, if $X_0\\neq (0,0,0)$, the original system is not attractive because $X(t)$ does not converge to the origin."
    ]
   },
   {
@@ -833,7 +844,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**"
+    "**TODO**\n",
+    "\n"
    ]
   },
   {
