--- a/Project-part-2.ipynb
+++ b/Project-part-2.ipynb
@@ -756,6 +756,23 @@
    "source": [
     "**Answer**\n",
     "\n",
+    "Given that $X_e = (0, 0, 0)$ and $w=w_e$, we have :\n",
+    "\n",
+    "$\\dot{\\Delta X} = A \\Delta X + B \\Delta \\omega $\n",
+    "\n",
+    "\n",
+    "First, let's express the original system in terms of the error variables:\n",
+    "\n",
+    "$\\dot{\\Delta x} = r \\cdot \\frac{1}{2} (\\omega_l + \\omega_r) \\cdot \\cos(\\theta) - r \\cdot \\frac{1}{2} (\\omega_l + \\omega_r)_e \\cdot \\cos(\\theta_e)$\n",
+    "$\\\\\\dot{\\Delta y} = r \\cdot \\frac{1}{2} (\\omega_l + \\omega_r) \\cdot \\sin(\\theta) - r \\cdot \\frac{1}{2} (\\omega_l + \\omega_r)_e \\cdot \\sin(\\theta_e)$\n",
+    "\n",
+    "$\\\\\\dot{\\Delta \\theta} = \\frac{r}{l} (\\omega_r - \\omega_l) - \\frac{r}{l} (\\omega_r - \\omega_l)_e$\n",
+    "\n",
+    "\n",
+    "In this case, none of $\\dot{\\Delta x}$,$\\dot{\\Delta y}$ and $\\dot{\\Delta \\theta}$ depend on coordinates, and also $\\theta_e = 0$\n",
+    "\n",
+    "Then the matrix A and B, we can write :\n",
+    "\n",
     "A= \\begin{bmatrix} 0 & 0 &0 \\\\ 0 & 0 &0 \\\\ 0 & 0 & 0\\end{bmatrix}\n",
     "$$\n",
     "$$\n",
