--- a/Project-part-2.ipynb
+++ b/Project-part-2.ipynb
@@ -861,8 +861,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**\n",
-    "\n"
+    "**Answer**\n",
+    "\n",
+    "Yes, when for example $\\omega_l = \\omega_r$.\n",
+    "the robot follows the straight path of the (Ox) axis."
    ]
   },
   {
@@ -878,7 +880,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**"
+    "**Answer**\n",
+    "\n",
+    "Based on $A$ and $B$, we recall that $d{\\Delta y}/dt=0$. the error in y remains unaffected by u."
    ]
   },
   {
@@ -894,7 +898,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO**"
+    "**Answer**\n",
+    "\n",
+    "The linearized system is controllable if and only if its controllability matrix is full rank. The controllability matrix is given by $\\mathcal{C} = [B \\, AB \\, A^2B] $, its rank is equal to 2 different than 3, the linearized system is not controllable."
    ]
   },
   {
